VERSION 2.5 - TBD
=================
2006-07 - new modules: take, deskew
2006-07 - Date/Time parsers now support Unix epoch time strings

VERSION 2.4 - 3 May 2006
========================
2006-05 - bug fix: pcapfile and cflow not closing file descriptors
2006-04 - bug fix: memory usage was higher than necessary and output was delayed because scheduler was too greedy about producing when it could consume
2006-02 - bug fix: file is Greedy consumer
2006-02 - bug fix: file -F 

VERSION 2.3 - 22 February 2006
==============================
2006-02 - ethereal updates (use new libethereal)
2005-12 - ported to gcc 4.0
2005-11 - Gasnet/UPC support begun; distribute module added
2005-10	- bytes.string conversion now hex escapes unprintables
2005-10 - packet.payload had incorrect size
2005-09 - SmacqGraphContainer replaces SmacqGraph being a linked list
2005-09 - Datalog parser started

VERSION 2.2 - 1 September 2005
==============================
2005-08 - File input system:
	   - Input modules use SmacqFileModule() to insert "file" module
	   - "file" module generates stream of files (string objects)
	   - Modules use StrucioStream::MagicOpen() to process file objects
	   - Input modules then iterate over resulting StrucioStream object
	   - StrucioStream abstracts compressed files, tailing files, etc.
	   - StrucioStream supports bz2 files
2005-08 - When a module calls enqueue(), it surrenders control to scheduler
	   - Scheduler honors fact that modules aren't reentrant
2005-08 - SmacqGraph graphs are now reference counted
2005-05 - sqlquery module added
2005-03 - sort module added
2005-03 - const module: -t and -f options
2005-03 - ported to gcc 3.4
2005-03 - Query Parser:
           - Attribute functions like "f( g(), h() )" now instantiated in parallel so 
             "print sum(), count()" now works as expected.
           - Renaming of attribute functions with "AS" now requires each 
             attribute function to have -f option
2005-03 - print module: 