@@ -1,0 +1,108 @@
+1060	358	445	2000-03-25T12:15:31.393132-07:00
+1051	329	445	2000-03-25T12:15:28.020237-07:00
+1061	431	139	2000-03-25T12:15:53.354234-07:00
+1061	430	139	2000-03-25T12:15:50.182853-07:00
+1061	429	139	2000-03-25T12:15:47.163434-07:00
+1061	428	139	2000-03-25T12:15:47.127418-07:00
+1061	427	139	2000-03-25T12:15:44.093205-07:00
+1061	426	139	2000-03-25T12:15:41.048696-07:00
+1061	425	139	2000-03-25T12:15:38.004917-07:00
+1061	424	139	2000-03-25T12:15:34.970249-07:00
+1061	423	139	2000-03-25T12:15:31.945492-07:00
+1061	421	139	2000-03-25T12:15:31.915711-07:00
+1061	418	139	2000-03-25T12:15:31.902515-07:00
+1061	417	139	2000-03-25T12:15:31.890978-07:00
+1061	412	139	2000-03-25T12:15:31.555230-07:00
+1061	411	139	2000-03-25T12:15:31.554210-07:00
+1061	410	139	2000-03-25T12:15:31.553174-07:00
+1061	409	139	2000-03-25T12:15:31.552164-07:00
+1061	408	139	2000-03-25T12:15:31.551027-07:00
+1061	407	139	2000-03-25T12:15:31.549749-07:00
+1061	406	139	2000-03-25T12:15:31.548553-07:00
+1061	405	139	2000-03-25T12:15:31.546804-07:00
+1061	404	139	2000-03-25T12:15:31.545646-07:00
+1061	403	139	2000-03-25T12:15:31.544603-07:00
+1061	402	139	2000-03-25T12:15:31.543539-07:00
+1061	401	139	2000-03-25T12:15:31.542351-07:00
+1061	400	139	2000-03-25T12:15:31.541175-07:00
+1061	399	139	2000-03-25T12:15:31.539540-07:00
+1061	398	139	2000-03-25T12:15:31.538362-07:00
+1061	397	139	2000-03-25T12:15:31.537292-07:00
+1061	396	139	2000-03-25T12:15:31.536216-07:00
+1061	395	139	2000-03-25T12:15:31.535031-07:00
+1061	394	139	2000-03-25T12:15:31.533792-07:00
+1061	393	139	2000-03-25T12:15:31.532031-07:00
+1061	392	139	2000-03-25T12:15:31.530822-07:00
+1061	391	139	2000-03-25T12:15:31.529772-07:00
+1061	390	139	2000-03-25T12:15:31.528634-07:00
+1061	389	139	2000-03-25T12:15:31.527459-07:00
+1061	388	139	2000-03-25T12:15:31.526237-07:00
+1061	387	139	2000-03-25T12:15:31.524317-07:00
+1061	386	139	2000-03-25T12:15:31.523056-07:00
+1061	385	139	2000-03-25T12:15:31.492601-07:00
+1061	384	139	2000-03-25T12:15:31.491501-07:00
+1061	383	139	2000-03-25T12:15:31.490265-07:00
+1061	382	139	2000-03-25T12:15:31.488971-07:00
+1061	381	139	2000-03-25T12:15:31.487872-07:00
+1061	380	139	2000-03-25T12:15:31.486659-07:00
+1061	379	139	2000-03-25T12:15:31.485619-07:00
+1061	378	139	2000-03-25T12:15:31.484744-07:00
+1061	377	139	2000-03-25T12:15:31.483377-07:00
+1061	376	139	2000-03-25T12:15:31.481168-07:00
+1061	375	139	2000-03-25T12:15:31.480107-07:00
+1061	374	139	2000-03-25T12:15:31.479025-07:00
+1061	373	139	2000-03-25T12:15:31.477595-07:00
+1061	372	139	2000-03-25T12:15:31.476108-07:00
+1061	371	139	2000-03-25T12:15:31.473742-07:00
+1061	370	139	2000-03-25T12:15:31.465803-07:00
+1061	369	139	2000-03-25T12:15:31.449118-07:00
+1061	368	139	2000-03-25T12:15:31.440841-07:00
+1061	367	139	2000-03-25T12:15:31.439352-07:00
+1061	366	139	2000-03-25T12:15:31.438199-07:00
+1061	365	139	2000-03-25T12:15:31.435816-07:00
+1061	364	139	2000-03-25T12:15:31.434037-07:00
+1061	363	139	2000-03-25T12:15:31.430712-07:00
+1061	362	139	2000-03-25T12:15:31.424355-07:00
+1061	361	139	2000-03-25T12:15:31.422384-07:00
+1061	360	139	2000-03-25T12:15:31.422224-07:00
+1061	359	139	2000-03-25T12:15:31.393278-07:00
+1052	357	139	2000-03-25T12:15:31.393042-07:00
+1052	356	139	2000-03-25T12:15:31.390280-07:00
+1052	334	139	2000-03-25T12:15:28.028445-07:00
+1052	333	139	2000-03-25T12:15:28.022503-07:00
+1052	332	139	2000-03-25T12:15:28.021391-07:00
+1052	331	139	2000-03-25T12:15:28.021223-07:00
+1052	330	139	2000-03-25T12:15:28.020780-07:00
+1043	328	139	2000-03-25T12:13:29.363329-07:00
+1043	327	139	2000-03-25T12:13:29.362882-07:00
+1043	326	139	2000-03-25T12:13:29.361618-07:00
+1043	325	139	2000-03-25T12:13:29.360668-07:00
+137	41189	137	2000-03-25T12:15:31.922436-07:00
+137	422	137	2000-03-25T12:15:31.921672-07:00
+1062	420	135	2000-03-25T12:15:31.914651-07:00
+1062	419	135	2000-03-25T12:15:31.914011-07:00
+1062	416	135	2000-03-25T12:15:31.830889-07:00
+1062	415	135	2000-03-25T12:15:31.774992-07:00
+1062	414	135	2000-03-25T12:15:31.768626-07:00
+1062	413	135	2000-03-25T12:15:31.768206-07:00
+1057	351	111	2000-03-25T12:15:29.119180-07:00
+1057	344	111	2000-03-25T12:15:28.620389-07:00
+1057	339	111	2000-03-25T12:15:28.129182-07:00
+1056	355	110	2000-03-25T12:15:29.119476-07:00
+1056	348	110	2000-03-25T12:15:28.620701-07:00
+1056	338	110	2000-03-25T12:15:28.126184-07:00
+1054	350	80	2000-03-25T12:15:29.019123-07:00
+1054	343	80	2000-03-25T12:15:28.518393-07:00
+1054	336	80	2000-03-25T12:15:28.103886-07:00
+1058	352	79	2000-03-25T12:15:29.119256-07:00
+1058	345	79	2000-03-25T12:15:28.620464-07:00
+1058	340	79	2000-03-25T12:15:28.131837-07:00
+1059	353	53	2000-03-25T12:15:29.119330-07:00
+1059	346	53	2000-03-25T12:15:28.620554-07:00
+1059	341	53	2000-03-25T12:15:28.134177-07:00
+1055	354	25	2000-03-25T12:15:29.119403-07:00
+1055	347	25	2000-03-25T12:15:28.620627-07:00
+1055	337	25	2000-03-25T12:15:28.120922-07:00
+1053	349	21	2000-03-25T12:15:29.019047-07:00
+1053	342	21	2000-03-25T12:15:28.518317-07:00
+1053	335	21	2000-03-25T12:15:28.102582-07:00
